注解分层标识

--- a/Spring/注解分层标识.md
+++ b/Spring/注解分层标识.md
@@ -11,17 +11,17 @@
 
 eg:
 -----------------------------------------------------------
-```
+```java
 @Service  
 public class VentorServiceImpl implements iVentorService {     
 }  
 ```
-```
+```java
 @Controller
 public class VentorMapper{
 }
 ```
-```
+```java
 @Repository  
 public class VentorDaoImpl implements iVentorDao {   
 }  
