--- a/SpringCloud/SpringBoot/999-相关日常操作使用记录.md
+++ b/SpringCloud/SpringBoot/999-相关日常操作使用记录.md
@@ -46,14 +46,36 @@ Collections.singletonMap("id", billNo)
 
 7.生成Map并赋值 {{put();}}
 
-```
+```java
  Map<String,Object> m = new HashMap(){{put("sum_id","123");put("mx_id","001");put("money","11.01");}};
 ```
 
 8.生成List并赋值 {{add();}}
 
-```
+```java
  List<Map<String,Object>> ls = new ArrayList(){{ add(m);add(m1);}};
+```
+
+9.根据字段分组转换成map    `(p1,p2)->p1)`可以避免`duplicate key`问题
+
+```java
+Map<String, Map<String, Object>> zkButtonMaps = zkButtonLs.stream().collect(Collectors.toMap(p -> String.valueOf(p.get("CODE")), p -> p, (p1,p2)->p1));
+```
+
+10.获取最大值
+
+```java
+ BasPro basPro = basPros.stream().max((p1,p2)-> Integer.compare(
+                Integer.parseInt(p1.getUpdateTimeTrans()),Integer.parseInt(p2.getUpdateTimeTrans()))).get();
+
+BasPro basPro = basPros.stream().max(Comparator.comparingLong(p -> Long.valueOf(p.getUpdateTimeTrans()))).get();
+
+```
+
+11.[集合对象去重]([java8List集合根据对象的属性去重 - 枫树湾河桥 - 博客园 (cnblogs.com)](https://www.cnblogs.com/fswhq/p/java8_list.html))
+
+```java
+jrmLs = jrmLs.stream().collect(collectingAndThen(toCollection(()-> new TreeSet<>(Comparator.comparing(JxdsRoleMenu::getMenuId))),ArrayList::new));
 ```
 
 
@@ -82,5 +104,65 @@ arBillSettlementLs.forEach(item -> {
 /** 将数据对象转换成Map */
 Map<String, Object> map = jsonMapper.readValue(responseEntity.getBody(), Map.class);
 
+    /***
+     * 将List<Map<String,Object>> 转成实体类
+     * @param list
+     * @param clazz
+     * @param <T>
+     * @return
+     * @author linzyc
+     */
+    @SneakyThrows
+    public static <T> List<T> toSnakeEntity(List<Map<String,Object>> list, Class<T> clazz){
+        mapper.setPropertyNamingStrategy(PropertyNamingStrategy.SNAKE_CASE);
+        List<T> toList = Lists.newArrayList();
+        list.forEach(
+                item ->{
+                    try {
+                        T reqJson =  mapper.readValue(mapper.writeValueAsString(item).toLowerCase(), clazz);
+                        toList.add(reqJson);
+                    } catch (JsonProcessingException e) {
+                        e.printStackTrace();
+                    }
+                }
+        );
+        return toList;
+    }
+
+    /**
+     * 将json字符串转换成对应Map
+     * @param info
+     * @return
+     * @author linzyc
+     */
+    @SneakyThrows
+    public static Map<String,Object> jsonStrToMap(String info) {
+        return mapper.readValue(info, Map.class);
+    }
+
 ```
 
+#### ③ 日期使用
+
+LocalDate
+
+LocalDateTime
+
+[3.3.1 Date 转 LocalDate]([Date与LocalDate互转 - 天妖姥爷 - 博客园 (cnblogs.com)](https://www.cnblogs.com/mafy/p/12810127.html))
+
+```java
+date.toInstant().atZone(ZoneId.systemDefault())
+                    .toLocalDate().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"))
+```
+
+[3.3.2 LocalDate 转 Date]([Date与LocalDate互转 - 天妖姥爷 - 博客园 (cnblogs.com)](https://www.cnblogs.com/mafy/p/12810127.html))
+
+```java
+Date.from(localDate.atStartOfDay(ZoneId.systemDefault()).toInstant());
+```
+
+
+
+### linux常用
+
+[nohup命令导致log文件过大处理办法。_Rain-CSDN博客](https://blog.csdn.net/Rain_xiaolong/article/details/81942727)
